# np-3dp

./: CMakeLists.txt  README.md
cmake/: FindSUITESPARSE.cmake  FindUMFPACK.cmake
include/: Np3dp.hpp
src/: Np3dp.cpp  main.cpp
